--- a/index.html
+++ b/index.html
@@ -5,8 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <section class="section-first">
+        <div class="profile-first">
+            <h1 class="title" >Welcome to</h1>
+            <h1 class="title" ><span class="span-color">Moto's</span> World!</h1>
+            <h3>I'm a learner I wanna make a coding World</h3>
+            <p class="first-pragraph">I can confident of my self, i need to practice more and more, if i practice inshaaAllah i will success, in the mean time i can explore my self on it, everyone pray for me. So that i can manage my self on my security</p>
+            <a class="first-anchor" target="_blank" href="facebook.com/motochowdhury">HIRE ME</a>
+        </div>
+        <div class="profile-first">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+
+    <section class="section-secend">
+        <div class="profile-first">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="profile-first">
+            <h1 class="title">Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p class="first-pragraph">I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="first-anchor" target="_blank" href="facebook.com/motochowdhury">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 </html>
