--- a/index.html
+++ b/index.html
@@ -8,32 +8,49 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="section-first">
-        <div class="profile-first">
-            <h1 class="title" >Welcome to</h1>
-            <h1 class="title" ><span class="span-color">Moto's</span> World!</h1>
-            <h3>I'm a learner I wanna make a coding World</h3>
-            <p class="first-pragraph">I can confident of my self, i need to practice more and more, if i practice inshaaAllah i will success, in the mean time i can explore my self on it, everyone pray for me. So that i can manage my self on my security</p>
-            <a class="first-anchor" target="_blank" href="facebook.com/motochowdhury">HIRE ME</a>
+    <section class="banner-home">
+        <div class="half-width">
+            <h1 class="title">Welcome to</h1>
+            <h1 class="title"><span>Moto's</span> World</h1>
+            <h3>I am a proffesional Web Developer,</h3>
+            <p>I can make Website which is seo friendly, i can manage all kind of Website. And it will be a good and optimized website. you can visit my project, i have three project for you as a demo</p>
+            <a target="_blank" href="https://www.facebook.com/motochowdhury">HIRE ME</a>
         </div>
-        <div class="profile-first">
+
+        <div class="half-width">
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
 
-    <section class="section-secend">
-        <div class="profile-first">
+    <section class="dream-banner"> 
+        <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
-        <div class="profile-first">
+
+        <div class="half-width">
             <h1 class="title">Dream Big</h1>
-            <h3>Become a web developer</h3>
-            <p class="first-pragraph">I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a class="first-anchor" target="_blank" href="facebook.com/motochowdhury">DOWNLOAD RESUME</a>
+            <h3>My dream is make a programming world</h3>
+            <p>I can fix problem now, that's why i feel happy. if i got a job then at first i will gift my parants from my first salary, i have to get a job at any cost because i have gapped 1 year for practicing on this sector</p>
+            <a target="_blank" href="https://www.facebook.com/motochowdhury">DOWNLOAD RSUME</a>
         </div>
+    </section>
+
+    <section class="exp-section">
+        <h1 class="title">EXPERIENCES</h1>
+            <div class="half-width" id="left">
+                <h1 class="exp-title">Full-Stack Web Developer</h1>
+                <h3 class="exp-h3">I will job with a remote company</h3>
+                <p>Full-Stack Web Development is a sector where Developer work both side, front and backend, there a something like all rounder, tehy can does it fluently, it beacuse they have knowladge of booth side, actually both side has nide each others knowladge</p>
+            </div>
+
+            <div class="half-width" id="right">
+                <h1 class="exp-title">Full-Stack Web Developer</h1>
+                <h3 class="exp-h3">I will job with a remote company</h3>
+                <p>Full-Stack Web Development is a sector where Developer work both side, front and backend, there a something like all rounder, tehy can does it fluently, it beacuse they have knowladge of booth side, actually both side has nide each others knowladge</p>
+            </div>
     </section>
 </body>
 </html>
